frontend/core/src/main/webapp/static/less/layout.less
/* ... */
// 1. Intermediate div needs height to work
.container-editor--inner__outer,
.container-editor--inner {
  height: inherit;    // [1]
}

// 1. Maximum height is set programmatically - set default maximum height here as well for reference.
.container-master,
.container-editor {
  max-height: @height-column-max;  // [1]
}

/*
Menu
*/

@height-menu-footer: @grid-vertical-medium * 2 + @margin-bottom-heading + @padding-vertically-centered;
// 1. Use native-style scrolling in WebKit browsers
.container-menu {
  -webkit-overflow-scrolling: touch;  // [1]
  width: @width-menu;
  overflow-y: auto;
  height: 100%;
  background-color: @color-background-menu;
}

// 1. Sticky footer, margin-bottom is the negative value of the footer's height.
// 2. Set margin-top for first-child of .container-menu to align vertically with toolbar.
// 3. Center vertically.
// 4. Increase click area with padding-bottom.
//    NOTE: Can't be more than 5px because vertical position of .separate depends on this.
.container-menu--top {
  min-height: 100%;
  margin: 0 auto -@height-menu-footer;  // [1]
  .separate {
    // use this to separate link elements from other
    line-height: 84px;
    padding-bottom: 6px;
    span {
      line-height: inherit;
    }
  }
  .link-menu:first-child {
    margin-top: @margin-top-heading;            // [2]
    padding-top: @padding-vertically-centered;  // [3]
    padding-bottom: 5px;                        // [4]
  }
  .link-menu-small {
    line-height: @grid-vertical;
  }
}

.container-menu--bottom, .container-menu--push {
  height: @height-menu-footer;
}

.container-menu--bottom {
  .link-menu {
    line-height: @grid-vertical-medium;
  }
  .link-menu:last-child {
    margin-bottom: @margin-bottom-heading;
    padding-bottom: @padding-vertically-centered;  // [3]
  }
}

// 1. Center vertically. See http://css-tricks.com/centering-css-complete-guide/#vertical-block-known
// 2. Set default max-height
// 3. Set white background to hide stuff below.
.container-modal {
  position: absolute;                   // [1]
  top: 50%;                             // [1]
  -webkit-transform: translateY(-50%);  // [1]
  -moz-transform: translateY(-50%);     // [1]
  -o-transform: translateY(-50%);       // [1]
  -ms-transform: translateY(-50%);      // [1]
  transform: translateY(-50%);          // [1]
  width: 100%;
  .center-horizontally-absolute();
  background-color: white;  // [3]
  .container-content {
    height: auto;
    max-height: 60vh; // [2]
  }
}

@large-screen-width-modal: 350px;
@large-screen-height-modal: 400px;

/*
Vertically center .container-master and .container-editor in large screens
*/
// 1. Set maximum dimensions for modal.
@media (min-height: @height-column-max) {
  .container-master,
  .container-editor {
    margin-top: -@height-column-max / 2;
    top: 50%;
  }
  .container-modal {
    max-height: @large-screen-height-modal; // [1]
  }
}

@media (min-width: @width-column-max) {
  .container-modal {
    max-width: @large-screen-width-modal;   // [1]
  }
}

// 1. Align right, but FIXME when there is more room.
@media (min-width: @min-width-three-column) {
  .container-editor {
    right: 0; // [1]
    max-width: @width-column-max;
  }
}

/*
**************************************************************************
# LEVEL 4: Fluid
*/
// 1. Match with .container-toolbar.
@height-footer: 62px; // [1]
@height-footer-short: @grid-vertical;

// Fluid container height.
//
// Sources:
// http://stackoverflow.com/a/15933376
// http://stackoverflow.com/a/12255692
// http://pixelsvsbytes.com/blog/2011/09/sticky-css-footers-the-flexible-way/
//
// 1. Fixes width calculation with swiper inside. See: http://stackoverflow.com/a/19835024
// 2. Inherit height for display: table.
// 3. Set width for display: table
.container-fluid {
  display: table;
  table-layout: fixed;  /* [1] */
  height: inherit;      /* [2] */
  width: 100%;          /* [3] */
}

// 1. Fluid container height.
// 2. Inherit height because parent uses display: table
// 3. Default bottom padding to make room for footer. NOTE: Override programmatically if footer height is different.
.container-fluid--inner {
  display: table-cell;            // [1]
  height: inherit;                // [1,2]
  padding-bottom: @height-footer; // [3]
}

// 1. Clear padding-bottom for footer from fluid container in editor.
//    Padding-bottom is set programmatically in editor into .content-container.
.container-editor .container-fluid--inner {
  padding-bottom: 0;  // [1]
}

// 3. Modal's bottom padding to make room for footer.
.container-modal .container-fluid--inner,
.container-fluid--inner.small-footer-height {
  padding-bottom: @height-footer-short;
}

// 1. Set width to expand horizontally.
.swiper-slide .container-content {
  width: 100%; /* [1] */
}

// 1. Make room for outer footer (.container-editor--inner__after).
.container-editor--inner__outer {
  padding-bottom: @height-footer-short; // [1]
}

// 1. Define height.
// 2. Align horizontally.
// 3. Use same position as in .container-editor.
.container-editor--inner__after {
  height: @height-footer-short; // [1]
  background-color: @color-background-btn-active;
  max-width: @width-column-max;     // [2]
  .center-horizontally-absolute();  // [2]
  position: absolute; // [3]
}

// 1. Use same positioning as in swiper to make .container-content scrollable
//    Set left and right properties as well because .container-master, .container-editor and .container-modal
//    are absolutely positioned.
//    Set position to absolute to make .container-content--after visible.
//    See: http://www.smashingmagazine.com/2013/08/09/absolute-horizontal-vertical-centering-css/
.container-editor {
  .swiper-slide .container-content,
  .container-content--after {
    position: absolute; // [1]
    left: 0;            // [1]
    right: 0;           // [1]
  }
}

// 1. Set height to expand vertically.
.container-sub-editor {
  height: 100%; // [1]
}
/* ... */

